lower requirement of JVM version from 11 to 8