@@ -1,6 +1,9 @@
 package tla.domain.model;
 
-import java.util.Map;
+import java.util.Collections;
+import java.util.stream.Collectors;
+import java.util.stream.Stream;
+import java.util.AbstractMap.SimpleEntry;
 
 import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonInclude;
@@ -39,11 +42,18 @@ public class ObjectReference implements Comparable<ObjectReference> {
 
     @Override
     public String toString() {
-        return Map.of(
-            "id", id,
-            "name", name,
-            "type", type,
-            "eclass", eclass
+        return Collections.unmodifiableMap(
+            Stream.of(
+                new SimpleEntry<>("id", id),
+                new SimpleEntry<>("name", name),
+                new SimpleEntry<>("type", type),
+                new SimpleEntry<>("eclass", eclass)
+            ).collect(
+                Collectors.toMap(
+                    (e) -> e.getKey(),
+                    (e) -> e.getValue()
+                )
+            )
         ).toString();
     }
 
